--- a/css/style.css
+++ b/css/style.css
@@ -6,45 +6,68 @@
 }
 /* common */
 .container{
-    margin: 8%;
-    /* test */
-    height: 900px;
-    width: auto;
-    background-color: aqua;
+    margin: 3%;
+ 
 }
 .row{
-    /* test */
-    height: 400px;
-    background-color: blueviolet;
-    width: auto;
+    margin: 30px;
+   
 }
 .position{
     position: relative;
-    /* test */
     width: 30%;
-    height: 300px;
+    height: auto;
+    
+   
 }
 .img{
-    height: 300px;
+    max-width: 100%;
+    max-height: 100%;
+    display: inline-block;
+   
+    
+}
+.after{
+    max-width: 100%;
+    max-height: 100%;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    
+    
+    
+}
+.resizing{
     width: 100%;
-    /* test */
-    background-color: red;
+    height: auto;
 }
 .heart{
-    height: 40px;
-    width: 40px;
+    padding: 8px;
     position: absolute;
     top: 17px;
     right: 0;
+    
     /* test */
-    background-color: cornsilk;
+    background-color:white;
 }
 .sale{
     position: absolute;
     bottom: 20px;
     left: 0;
+    
     /* test */
-    height: 30px;
-    width: 30px;
-    background-color: white;
+    
+    background-color: #eb0037;
+}
+.testo{
+    position: relative;
+   
+}
+.img:hover{
+    opacity: 0;
+}
+.after:hover{
+    opacity: 1;
 }
