--- a/css/style.css
+++ b/css/style.css
@@ -7,67 +7,98 @@
 /* common */
 .container{
     margin: 3%;
- 
 }
+/* riga */
 .row{
-    margin: 30px;
-   
+    margin: 30px;  
 }
+/* mantiene gli elementi affiancati */
 .spazio{
     display: inline-block;
 }
+/* div riferimento elementi absoluto */
 .position{
     position: relative;
     width: 400px;
-    height: auto;
-    
-   
+    height: auto;  
 }
+/*  img prima */
 .img{
     max-width: 100%;
     max-height: 100%;
-    display: inline-block;
-   
-    
+    display: inline-block;   
 }
+/* immagini con la b */
 .after{
     max-width: 100%;
     max-height: 100%;
     opacity: 0;
     position: absolute;
     top: 0;
-    left: 0;
-
-    
-    
-    
+    left: 0;   
 }
+/* responsivita img */
 .resizing{
     width: 100%;
     height: auto;
 }
+/* elemento cuore su img */
 .heart{
     padding: 8px;
     position: absolute;
     top: 17px;
     right: 0;
-    
-    /* test */
     background-color:white;
 }
+/* elemento sconto su img */
 .sale{
     position: absolute;
     bottom: 20px;
     left: 0;
-    
-    /* test */
-    
     background-color: #eb0037;
+    color: white;
+    padding: 4px;
 }
+/* elemnto sostenibilita */
+.sostenibilita{
+    position: absolute;
+    bottom: 20px;
+    left: 50px;
+    background-color:#00875a;
+    color: white;
+    padding: 4px;
+}
+/* elemento sotenibilita img 6 */
+.sostenibilita1{
+    position: absolute;
+    bottom: 20px;
+    left: 0;  
+    background-color: #00875a;
+    color: white;
+    padding: 4px;
+}
+/* posizione del div testo */
 .testo{
     position: relative;
-   
 }
+/* prima riga di informazioni capo */
+.prima-riga{
+
+}
+/* seconda riga di informazioni capo */
+.seconda-riga{
+    font-weight: 600;
+}
+/* terza riga di informazioni capo */
+/* prezzo dopo sconto */
+.costo{
+    color: red;
+}
+/* prezzo prima dello sconto */
+.costo-barratp{
+    text-decoration: line-through;
+}
+/* elemnti hover */
 .img:hover{
     opacity: 0;
 }
