--- a/css/style.css
+++ b/css/style.css
@@ -16,27 +16,20 @@
 /* mantiene gli elementi affiancati */
 .spazio{
     display: inline-block;
+    width: 30%;
 }
 /* div riferimento elementi absoluto */
 .position{
     position: relative;
-    width: 400px;
+    width: auto;
     height: auto;  
 }
-/*  img prima */
 .img{
-    max-width: 100%;
-    max-height: 100%;
-    display: inline-block;   
+    width: 100%;
 }
 /* immagini con la b */
 .after{
-    max-width: 100%;
-    max-height: 100%;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    left: 0;   
+  display: none;
 }
 /* responsivita img */
 .resizing{
@@ -103,9 +96,9 @@
     text-decoration: line-through;
 }
 /* elemnti hover */
-.img:hover{
-    opacity: 0;
+.position:hover .img{
+    display: none;
 }
-.after:hover{
-    opacity: 1;
+.position:hover .after {
+    display: inline-block;
 }
